samples/_failures_safe/1761394267_85aa1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef6b84a2.c: In function ‘main’:
./samples/SAFE/__tmp_ef6b84a2.c:160:13: error: expected expression at end of input
  160 |             case
      |             ^~~~
./samples/SAFE/__tmp_ef6b84a2.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ef6b84a2.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ef6b84a2.c:160:13: error: expected declaration or statement at end of input
